[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/Terrain.gd" type="Script" id=1]

[node name="Terrain" type="Node"]
script = ExtResource( 1 )

[node name="TerrainLine" type="Line2D" parent="."]
width = 1.0
default_color = Color( 0.4, 0.501961, 1, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="TerrainPolygon" type="Polygon2D" parent="TerrainLine"]
color = Color( 0.882353, 0.65098, 0.203922, 1 )

[node name="DestructibleTerrain" type="StaticBody2D" parent="." groups=[
"terrainCollision",
]]
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DestructibleTerrain"]
